# HORIZONTE

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROMPT_HORIZONTE.md  README.md  SECURITY.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  codeql.yml  lint_type.yml  publish.yml
data/: summary.jsonl
docs/: BLUEPRINT_HORIZONTE.md  CLI_API.md  CONTRATOS_IO.md  DATASETS_SINTETICOS.md  DIAGRAMA_HORIZONTE.mmd  DIAGRAMA_HORIZONTE_ASCII.mmd  DIAGRAMA_HORIZONTE_EXPORT.mmd  DIAGRAMA_HORIZONTE_MIN.mmd  ESPEC_MAT_ALG.md  GOBERNANZA.md  INSTALACION.md  MARCO_CONCEPTUAL.md  METRICA_C3.md  RIESGOS_ETICA.md  ROADMAP_DETALLADO.md  SIM_VERIF.md  TELEMETRIA_SPEC.md  TEST_MIN.mmd
notebooks/: Exploracion_MITG_AMD.ipynb  Regimenes_y_LZC.ipynb  Topologia_Persistente.ipynb
scripts/: generate_datasets.py  generate_example_plots.py  tasks.ps1
src/horizonte/: __init__.py  cli.py
src/horizonte/amd/: koopman.py
src/horizonte/api/: server.py
src/horizonte/core/: config.py  telemetry.py
src/horizonte/eca/: agents.py
src/horizonte/icgq/: qaoa.py
src/horizonte/mitg/: iit30.py  iit_discrete.py  oinfo.py  tda.py  topology.py
src/horizonte/sch/: cml.py
tests/: test_api_smoke.py  test_iit30.py  test_oinfo.py  test_phi_si.py  test_smoke.py
