[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizonte"
version = "0.1.0"
description = "Proyecto HORIZONTE: simulación y métricas para conciencia emergente (experimental)"
authors = [{name="HORIZONTE Team"}]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "networkx",
  "matplotlib",
]

[project.optional-dependencies]
tda = [
  "ripser>=0.6.8",
  # gudhi es opcional y puede no estar disponible en Windows
]
dev = [
  "pytest",
  "mypy",
  "ruff",
]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
]

[project.scripts]
horizonte = "horizonte.cli:main"
